--- a/WpfApp1/UI/UiWindow/MainWindow/MainWindowView.xaml
+++ b/WpfApp1/UI/UiWindow/MainWindow/MainWindowView.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="UI.MainWindow.MainWindowView"
+﻿<Window x:Class="UI.UiWindow.MainWindow.MainWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:UI.MainWindow"
+        xmlns:local="clr-namespace:UI.UiWindow.MainWindow"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"
         Title="MainWindow" Height="200" Width="400">
