YYY設定を追加

--- a/WpfApp1/UI/UiWindow/MainWindow/MainWindowView.xaml
+++ b/WpfApp1/UI/UiWindow/MainWindow/MainWindowView.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:UI.UiWindow.MainWindow"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"
-        Title="MainWindow" Height="200" Width="400">
+        Title="MainWindow" Height="250" Width="400">
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -18,19 +18,24 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Row="0" Grid.Column="0" Text="ZZZ設定 入力文字数指定上限" Margin="5"/>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="YYY設定" Margin="5"/>
 
-                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding ZZZVal.Value}" Margin="5"/>
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding YYYVal.Value}" Margin="5"/>
 
-                <TextBlock Grid.Row="1" Grid.Column="0" Text="AAA設定 入力文字数指定" Margin="5"/>
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="ZZZ設定 入力文字数指定上限" Margin="5"/>
 
-                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding AAAVal.Value}" Margin="5"/>
+                <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding ZZZVal.Value}" Margin="5"/>
+
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="AAA設定 入力文字数指定" Margin="5"/>
+
+                <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding AAAVal.Value}" Margin="5"/>
             </Grid>
         </GroupBox>
 
