--- a/WpfApp1/UI/UiWindow/MainWindow/MainWindowView.xaml
+++ b/WpfApp1/UI/UiWindow/MainWindow/MainWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="UiParts.UiWindow.MainWindow.MainWindowView"
+﻿<uiwindow:WindowBase xmlns:uiwindow="clr-namespace:UiParts.UiWindow" x:Class="UiParts.UiWindow.MainWindow.MainWindowView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:UiParts.UiWindow.MainWindow"
         mc:Ignorable="d"
         DataContext="{Binding RelativeSource={RelativeSource Mode=Self}}"
-        Title="MainWindow" Height="250" Width="400" Closing="Window_Closing">
+        Title="MainWindow" Height="250" Width="400">
     <Grid Margin="5">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -53,4 +53,4 @@
         </GroupBox>
 
     </Grid>
-</Window>
+</uiwindow:WindowBase>
